--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Google</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<ul id="navbar">
+    <li><a id="übergoogle" href="">Über Google</a></li>
+    <li><a id="store" href="">Store</a></li>
+    <li><a id="gmail" href="">Gmail</a></li>
+    <li><a id="bilder" href="">Bilder</a></li>
+</ul>
 <body>
     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
     <input type="search" id="searchbar">
