Navbar fix, Buttons

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <ul id="navbar">
     <li><a id="übergoogle" href="">Über Google</a></li>
     <li><a id="store" href="">Store</a></li>
-    <li><a id="gmail" href="">Gmail</a></li>
-    <li><a id="bilder" href="">Bilder</a></li>
+    <li><a id="gmail" href="">Bilder </a></li>
+    <li><a id="bilder" href="">Gmail</a></li>
 </ul>
 <body>
     <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="google logo">
     <input type="search" id="searchbar">
+
+    <button id="googlesuche">Google Suche</button>
+    <button id="glück"> Auf gut Glück!</button>
 </body>
 </html>
